@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.15.12" />
 <item ver="1.15.11" />
 <item ver="1.15.10" />
 <item ver="1.15.9" />
